Fix TFS	134375 Delegate.GetMethodInfo should throw if no metadata

--- a/src/System.Private.Reflection.Execution/src/Resources/Strings.resx
+++ b/src/System.Private.Reflection.Execution/src/Resources/Strings.resx
@@ -228,4 +228,10 @@
   <data name="Acc_ReadOnly" xml:space="preserve">
     <value>Cannot set a constant field.</value>
   </data>
+  <data name="DelegateGetMethodInfo_NoDynamic" xml:space="preserve">
+    <value>Cannot retrieve a MethodInfo for this delegate because the method it targeted was not enabled for metadata using the Dynamic attribute. For more information, please visit http://go.microsoft.com/fwlink/?LinkID=616868</value>
+  </data>
+  <data name="DelegateGetMethodInfo_NoInstantiation" xml:space="preserve">
+    <value>Cannot retrieve a MethodInfo for this delegate because the necessary generic instantiation was not metadata-enabled. For more information, please visit http://go.microsoft.com/fwlink/?LinkID=616868</value>
+  </data>
 </root>
