--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -2605,4 +2605,10 @@
   <data name="NotSupported_ByRefLikeArray" xml:space="preserve">
     <value>Cannot create arrays of ByRef-like values.</value>
   </data>
+  <data name="StackTrace_AtWord" xml:space="preserve">
+    <value>   at </value>
+  </data>
+  <data name="StackTrace_EndStackTraceFromPreviousThrow" xml:space="preserve">
+    <value>--- End of stack trace from previous location where exception was thrown ---</value>
+  </data>
 </root>
