Add anti-ByRefLike checks in the following apis
Fix https://github.com/dotnet/corert/issues/3080

Type.MakeArrayType()
Array.CreateInstance()
Type.MakeGenericType()
MethodInfo.MakeGenericMethod()
Activator.CreateInstance()
RuntimeHelpers.GetUninitializedObject()

Thrown exception type determined by testing CoreCLR scenario
so point the finger there for all the sad inconsistencies
(looking at you, MakeGenericMethod()).

--- a/src/System.Private.Reflection.Core/src/Resources/Strings.resx
+++ b/src/System.Private.Reflection.Core/src/Resources/Strings.resx
@@ -370,4 +370,10 @@
   <data name="Arg_EnumLitValueNotFound" xml:space="preserve">
     <value>Literal value was not found.</value>
   </data>
+  <data name="NotSupported_ByRefLike" xml:space="preserve">
+    <value>Cannot create boxed ByRef-like values.</value>
+  </data>
+  <data name="CannotUseByRefLikeTypeInInstantiation" xml:space="preserve">
+    <value>Cannot instantiate a generic type on a byref-like type.</value>
+  </data>
 </root>
