Make Assembly.Load() throw same exception as CoreCLR
When an assembly matching the simple name is found
but the version is wrong, Assembly.Load throws
a FileLoadException with a ref-def mismatch string.

This change makes Project N match that behavior as
well as separating the notion of a preferred exception
(the most informative exception to throw if no
matching candidate has found later in the search)
and the actual exception (used to signal that load
as a whole has failed.)

--- a/src/System.Private.TypeLoader/src/Resources/Strings.resx
+++ b/src/System.Private.TypeLoader/src/Resources/Strings.resx
@@ -126,4 +126,7 @@
   <data name="FileNotFound_AssemblyNotFound" xml:space="preserve">
     <value>Cannot load assembly '{0}'. No metadata found for this assembly.</value>
   </data>
+  <data name="FileLoadException_RefDefMismatch" xml:space="preserve">
+    <value>Cannot load assembly '{0}'. The assembly exists but its version {1} is lower than the requested version {2}.</value>
+  </data>
 </root>
