--- a/src/System.Private.CoreLib/src/Resources/Strings.resx
+++ b/src/System.Private.CoreLib/src/Resources/Strings.resx
@@ -1176,6 +1176,9 @@
   <data name="InvalidTimeZone_InvalidRegistryData" xml:space="preserve">
     <value>The time zone ID '{0}' was found on the local computer, but the registry information was corrupt.</value>
   </data>
+  <data name="IO_DriveNotFound_Drive" xml:space="preserve">
+    <value>Could not find the drive '{0}'. The drive might not be ready or might not be mapped.</value>
+  </data>
   <data name="IO_FileExists_Name" xml:space="preserve">
     <value>The file '{0}' already exists.</value>
   </data>
@@ -2574,6 +2577,9 @@
   </data>
   <data name="Arg_DllNotFoundExceptionParameterized" xml:space="preserve">
     <value>Unable to load DLL '{0}': The specified module could not be found.</value>
+  </data>
+  <data name="Arg_DriveNotFoundException" xml:space="preserve">
+    <value>Attempted to access a drive that is not available.</value>
   </data>
   <data name="WrongSizeArrayInNStruct" xml:space="preserve">
     <value>Type could not be marshaled because the length of an embedded array instance does not match the declared length in the layout.</value>
