[ILVerify] Implement type / method / field access verifications (#4762)
* WIP: Implemented class and method access verification.

* Changed access verifications to appropriately cast to EcmaType/Method.

* Added test cases for type / method access verifications.

* Implemented method signature access verification.

* Added test cases for method signature access verification.

* Implemented field access verification.

* Added tests for field access verification.

* Added special test case for accessing family field of superclass of containing class. Refactored some AccessTest names.

* Added additional instance parameter to field/method access checks, to check family access.

* Implemented access verification for friend assemblies.

* Added relevant PEVerify code part for security critical code.

* Added try-catch to public key comparison.

--- a/src/ILVerify/src/Resources/Strings.resx
+++ b/src/ILVerify/src/Resources/Strings.resx
@@ -207,6 +207,9 @@
   <data name="ExpectedValClassObjRefVariable" xml:space="preserve">
     <value>Value type, ObjRef type or variable type expected.</value>
   </data>
+  <data name="FieldAccess" xml:space="preserve">
+    <value>Field is not visible.</value>
+  </data>
   <data name="InitLocals" xml:space="preserve">
     <value>initlocals must be set for verifiable methods with one or more local variables.</value>
   </data>
@@ -218,6 +221,9 @@
   </data>
   <data name="LdvirtftnOnStatic" xml:space="preserve">
     <value>ldvirtftn on static.</value>
+  </data>
+  <data name="MethodAccess" xml:space="preserve">
+    <value>Method is not visible.</value>
   </data>
   <data name="PathStackDepth" xml:space="preserve">
     <value>Stack depth differs depending on path.</value>
